Bug 1470907 - Call AsyncShutdown for threads at the end of nsHostResolver::ThreadFunc r=froydnj a=lizzard

MozReview-Commit-ID: 2M8Qn8KDfdx